<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_save"
        app:showAsAction="withText" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="withText" />
    <item
        android:id="@+id/importItems"
        android:icon="@drawable/ic_download"
        android:title="@string/importItems"
        app:showAsAction="withText" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/txt_about"
        app:showAsAction="never" />
</menu>